--- a/client/index.html
+++ b/client/index.html
@@ -80,18 +80,18 @@
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <!-- <script src="/disp-set"></script>
+    <script src="/disp-set"></script>
     <script src="/logic-set"></script>
     <script src="/logic-model"></script>
     <script src="/logic-ctrl"></script>
     <script src="/disp-ctrl"></script>
-    <script src="/save"></script> -->
+    <script src="/save"></script>
 
-    <script src="./scripts/display/display-settings.js"></script>
+    <!-- <script src="./scripts/display/display-settings.js"></script>
     <script src="./scripts/logic/logic-settings.js"></script>
     <script src="./scripts/logic/black-jack-model.js"></script>
     <script src="./scripts/logic/black-jack-logic-controller.js"></script>
     <script src="./scripts/display/display-controller.js"></script>
-    <script src="./scripts/logic/save-system.js"></script>
+    <script src="./scripts/logic/save-system.js"></script> -->
 </body>
 </html>
