readme.md added

--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Stack Black Jack</title>
 
-    <!-- <link rel="stylesheet" href="/reset">
+    <link rel="stylesheet" href="/reset">
     <link rel="stylesheet" href="/style"/>
-    <link rel="icon" href="/icon"/> -->
+    <link rel="icon" href="/icon"/>
     
-    <link rel="stylesheet" href="./reset.css">
+    <!-- <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css"/>
-    <link rel="icon" href="./resources/icon.png"/>
+    <link rel="icon" href="./resources/icon.png"/> -->
+    
 </head>
 <body>
     <main>
@@ -93,5 +94,6 @@
     <script src="./scripts/logic/black-jack-logic-controller.js"></script>
     <script src="./scripts/display/display-controller.js"></script>
     <script src="./scripts/logic/save-system.js"></script> -->
+
 </body>
 </html>
